Latest Dockerfile/Readme for prod image