@@ -1,8 +1,26 @@
-# Percipiomedia Apache Ignite Production Docker Image
-
+# Jobcase Apache Ignite Production Docker Image
+ 
 ## Introduction
 
-The docker images includes the Apache Ignite binaries V2.4. The binaries are built from GitHub https://github.com/percipiomedia/ignite.git branch ignite-2.4.
+The docker image includes the Apache Ignite binaries V2.4. The binaries are built from GitHub branch ignite-2.4 [link](https://github.com/percipiomedia/ignite.git).
+
+The docker image follows the control pattern for running commands/scripts at container startup.
+
+## History
+
+* Initial version (5/21/2018): It includes Dockerfile using binaries from GitHub branch build, grid configuration files for multicast-, S3 bucket and file- Apache Ignite node discovery.
+
+## TODO
+
+* Document logging configuration.
+* Add logic for setting setConsistentId with suffix host DNS.
+* Add remote debug support.
+* Add JMX support.
+* Document Xterm support.
+* Add command for creating schema for binary objects from file ignite-schema.sql.
+* Define and implement healthcheck logic.
+* Add optional command for activating grid.
+* Add optional command for updating baseline topology.
 
 ## Terminology
 
@@ -26,11 +44,21 @@ Docker Container:
 * [2]: https://docs.docker.com/engine/tutorials/networkingcontainers/ "Networking Containers"
 * [3]: https://docs.docker.com/network/overlay/ "Overlay Networks"
 * [4]: https://luppeng.wordpress.com/2018/01/03/revisit-setting-up-an-overlay-network-on-docker-without-docker-swarm/ "Overlay Network Without Swarm"
+* [5]: https://apacheignite.readme.io/docs/distributed-persistent-store "Apache Ignite Persistence"
+* [6]: https://apacheignite.readme.io/docs/jvm-and-system-tuning#garbage-collection-tuning "Apache Ignite Garbage Collection"
+* [7]: http://www.oracle.com/technetwork/articles/java/g1gc-1984535.html "Garbage First Garbage Collector Tuning"
+* [8]: http://www.baeldung.com/jvm-garbage-collectors "JVM Garbage Collectors Overview"
+* [9]: https://apacheignite.readme.io/docs/events "Apache Ignite Events"
+* [10]: https://docs.docker.com/docker-for-mac/faqs/ "Docker for Mac FAQS"
+* [11]: https://docs.docker.com/docker-for-mac/osxfs/ "Docker File System osxfs for Mac"
+* [12]: https://docs.docker.com/docker-for-mac/networking/ "Docker Networking on Mac"
+* [13]: https://github.com/mal/docker-for-mac-host-bridge "Docker for Mac - Host Bridge"
+* [14]: https://apacheignite.readme.io/docs/binary-marshaller "Apache Ignite Binary Marshaller"
 
 ## Build
 
 ~~~~
-sudo docker build -t apacheignite/percipiomedia:2.4.0 .
+sudo docker build -t apacheignite/jobcase:2.4.0 .
 ~~~~
 
 ## Networking
@@ -110,7 +138,7 @@ Attach specific network to container:
 ~~~~
 sudo docker run -it
     --net=my-bridge
-    --name=ignite-percipio apacheignite/percipiomedia:2.4.0 
+    --name=ignite-percipio apacheignite/jobcase:2.4.0 
 ~~~~
 
 When attaching a container to a bridge network and it should be reachable from the outside world, port mapping needs to be configured.
@@ -127,9 +155,32 @@ docker network create -d overlay --attachable --subnet=192.168.10.0/24 my-overla
 
 Please refer to [link][4] for setting up overlay network without Swarm.
 
-## Configurationn
+## Running Commands at Container Startup
 
+The docker image makes use of `ENTRYPOINT`. It allows the container to run as executable.
 
+~~~~
+ENTRYPOINT ["/bin/bash", "entrypoint.sh"]
+
+# Set default arguments for ENTRYPOINT
+CMD ["--debug", "--launch", "${IGNITE_HOME}/run.sh &"]
+~~~~
+
+The executable `entrypoint.sh` supports controller command pattern. You can pass-in a list of commands which should be executed at startup.
+
+As default, it executes the Apache Ignite startup script `${IGNITE_HOME}/run.sh &` in background.
+
+You can run additional commands at startup.
+
+Example:
+
+~~~~
+sudo docker run -it
+    --name=ignite-jobcase apacheignite/jobcase:2.4.0 
+    "--launch ${IGNITE_HOME}/run.sh &;${IGNITE_HOME}/control.sh --activate"
+~~~~
+
+## Configuration
 
 ### Ports
 
@@ -184,7 +235,13 @@ sudo docker run -it
 
 ### Discovery
 
-The docker image comes with Apache Ignite grid configuration files for two types of node discovery.
+The docker image comes with Apache Ignite grid configuration files for three types of node discovery.
+
+#### Multicast
+
+As default, multicast is used for discovering other nodes in the grid.
+
+The configuration file `/opt/jobcase/config/multicast.discovery.node.config.xml` defines the default settings.
 
 #### File
 
@@ -203,6 +260,109 @@ Start container using S3 bucket node discovery:
     -e "CONFIG_URI=file:///opt/jobcase/config/s3bucket.discovery.node.config.xml"
 ~~~~
 
+### Grid Persistence
+
+The grid configuration file(s) enable native persistence.  Apache Ignite stores a superset of data on disk, and as much as it can in RAM based on the capacity of the latter. 
+
+The persistence storage folder is located under `/opt/jobcase/db`. A data region called `Default_Region` is created with `[initSize=256.0 MiB, maxSize=2.0 GiB, persistenceEnabled=true]`.
+
+At the moment, our grid configuration creates a unique id for the node by generating a UUID. And it is using the UUID to create a subdirectory under `/opt/jobcase/db`. In the subdirectory Apache Ignite persist the data for the node.
+
+~~~~
+        <!-- As default, it creates a unique id for the node by generating a UUID. 
+             It is used part of the persistent storage folder path. 
+             E. g. persistent storage folder /opt/jobcase/db/node00-49755452-fa53-41d4-82d3-cfff0b830a57.
+             
+             It is recommend to set the consistent id from the outside instead using generated value.
+             <property name="setConsistentId" value=""/>
+         -->
+~~~~
+
+Quote from Apache Ignite documentation [link][5]:
+>To make sure a node gets assigned for a specific subdirectory and, thus, for specific data partitions even after restarts, set IgniteConfiguration.setConsistentId to a unique value cluster-wide. The consistent ID is mapped to UUID from node{IDX}-{UUID} string.
+
+### JVM Garbage Collection
+
+As default, our grid configuration is using G1 garbage collector [link][6].
+
+Default settings in Dockerfile:
+
+~~~~
+# Initial and maximum JVM Heap size
+ENV JVM_HEAP_SIZE 1g
+
+# JVM maximum amount of native memory that can be allocated for class metadata 
+ENV JVM_METASPACE_SIZE 1g
+
+# Ignite JVM settings
+ENV JVM_OPTS="-XX:MaxMetaspaceSize=${JVM_METASPACE_SIZE} -server -Xms${JVM_HEAP_SIZE} -Xmx${JVM_HEAP_SIZE} -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M -Xloggc:${JOBCASE_LOGS}/jvm-gc.log"
+~~~~
+
+The default JVM settings can be changed at container startup by passing environment variable `JVM_OPTS` and/or `JVM_HEAP_SIZE` and/or `JVM_METASPACE_SIZE`.
+
+Setting memory values as equivalent in production environment:
+ 
+~~~~
+-e "JVM_METASPACE_SIZE=2g" -e "JVM_HEAP_SIZE=30g"
+~~~~
+
+
+### Events
+
+Our grid configuration registers for a list of events. So it receives notification for the specified events happening in the cluster.
+
+The selected events are so called low frequency events. To avoid performance issues as stated in Apache Ignite documentation (see below quote).
+
+~~~~
+       <property name="includeEventTypes">
+          <list>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CHECKPOINT_SAVED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_STARTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_STOPPED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_PART_LOADED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_PART_UNLOADED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_JOB_TIMEDOUT"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_JOB_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_JOB_FAILED_OVER"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_JOB_REJECTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_JOB_CANCELLED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_TIMEDOUT"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLASS_DEPLOY_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_DEPLOY_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_DEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_UNDEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_STARTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_REBALANCE_STOPPED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_NODE_JOINED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_NODE_LEFT"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_NODE_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_NODE_SEGMENTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLIENT_NODE_DISCONNECTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLIENT_NODE_RECONNECTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLASS_DEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLASS_UNDEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CLASS_DEPLOY_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_DEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_UNDEPLOYED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_TASK_DEPLOY_FAILED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_STARTED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_STOPPED"/>
+            <util:constant static-field="org.apache.ignite.events.EventType.EVT_CACHE_NODES_LEFT"/>
+          </list>
+       </property>       
+~~~~
+
+Quote from Aache Ignite documentation:
+
+> By default, event notifications are turned off for performance reasons.
+
+> Since thousands of events per second are generated, it creates an additional load on the system. This can lead to significant performance degradation. Therefore, it is highly recommended to enable only those events that your application logic requires.
+
+### Logging
+
+TODO
+
 ### Ignite REST API
 
 Apache Ignite supports REST protocol [link][1]. 
@@ -216,16 +376,65 @@ It can be overwritten by passing environment argument to the `docker run` comman
     -e "IGNITE_REST_PORT=<port value>"
 ~~~~
 
-
-
-
 ## Appendix
 
 ### Mac OS X
 
+The docker integration differs in several areas on Mac OS X. Some aspects are pointed out in the [link FAQS][10].
+
+The Docker Engine starts a Linux VM on Mac OS X.
+
+The below command allows to jump straight into the VM on a Mac.
+
+~~~~
+screen ~/Library/Containers/com.docker.docker/Data/com.docker.driver.amd64-linux/tty
+~~~~
+
+The Docker Engine for Mac uses a new file system called [link ‘osxfs’][11]. 
+
 #### Networking
 
-TODO
+The Docker Engine does not create a network interface on Mac [link][12]. As a consequence, you  cannot ping docker containers on your macOS host. And you cannot access the containers by their ip-addresses on your macOS host.
+You have to use port mapping for accessing docker container services on your macOS host.
+
+You can install TUNTAP [link][13] to address the host access limitation. Or you are using port mapping in the association with `org.apache.ignite.configuration.BasicAddressResolver` in the grid configuration file.
+
+When running Mlstore not inside a docker container instead on your macOS host. You have to map ports and define address resolvers if you did not install TUNTAP.
+
+Add addressResolver to `<property name="discoverySpi">`. Replace the container ip-address `172.19.0.2` and macOS host address `192.168.49.117` with your environment values.
+
+~~~~
+                <property name="addressResolver">
+                     <bean class="org.apache.ignite.configuration.BasicAddressResolver">
+                         <constructor-arg>
+                             <map>
+                                 <entry key="172.19.0.2" value="192.168.49.117"/>
+                             </map>
+                         </constructor-arg>
+                     </bean>
+                </property>
+
+~~~~
+
+Add addressResolver to `<property name="communicationSpi">`. And update the ip-address values.
+
+~~~~
+                <property name="addressResolver">
+                     <bean class="org.apache.ignite.configuration.BasicAddressResolver">
+                         <constructor-arg>
+                             <map>
+                                 <entry key="172.19.0.2" value="192.168.49.117"/>
+                             </map>
+                         </constructor-arg>
+                     </bean>
+                </property>                                
+~~~~
+
+Launch the docker container with port mapping for discovery- and communication ports.
+E. g. `-p 47100:47100 -p 47500:47500`.
+
+
+
 
 #### Xterm Display
 
